fixed overlapping of error msg

--- a/src/main/resources/static/css/masthead.css
+++ b/src/main/resources/static/css/masthead.css
@@ -7,5 +7,8 @@
         height:auto;
     }
     .info{
-    font-size: 40px;
+    display: inline;
+    font-size: 16px;
+    font-style:oblique;
+    color:red;
     }
